--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,23 +1,23 @@
 <%- include('partials/header') -%>
 <div class="grid grid-cols-9 p-5 sm:pt-5">
-  <div class="col-start-1 col-span-9 sm:col-start-2 sm:col-span-5 sm:border-r border-slate-900 sm:pr-6 sm:mb-5">
-  <section class="bg-slate-300 px-8 py-4 ">
+  <div class="col-start-1 col-span-9 lg:col-start-1 lg:col-span-6 lg:border-r border-slate-900 lg:pr-6 lg:mb-5">
+  <section class="bg-slate-300 px-8 py-4">
   <div class="row justify-content-center">
     <div class="grid grid-cols-6">
-      <h2 class="card-title col-start-1 col-span-6 sm:col-span-4 "><%= post.title %></h2>
-      <h2 class="card-title col-start-1 col-span-6 sm:col-start-5 sm:col-span-2 justify-self-end"><a href="/profile/<%= post.user._id%>"><%= post.user.userName %></h2></a>
+      <h2 class="card-title col-start-1 col-span-6 md:col-span-4 "><%= post.title %></h2>
+      <h2 class="card-title col-start-1 col-span-6 md:col-start-5 md:col-span-2 justify-self-end"><a href="/profile/<%= post.user._id%>"><%= post.user.userName %></h2></a>
     </div>
     <div class="py-4">
       <img src="<%= post.image%>" />
     </div>
     <div class="grid grid-cols-12 flex">
-      <p class="col-start-1 sm:col-span-7 col-span-12"> <%= post.caption %></p>
-      <div class="row start-3 col-start-1 col-span-6 sm:row-start-1 sm:col-start-9 sm:col-span-2 justify-self-start mt-4"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
-      <div class="col-start-7 col-span-6 sm:row-start-1 sm:col-start-11 sm:col-span-2 justify-self-end mt-4"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
+      <p class="col-start-1 md:col-span-7 col-span-12"> <%= post.caption %></p>
+      <div class="row start-3 col-start-1 col-span-6 md:row-start-1 md:col-start-9 md:col-span-2 justify-self-start mt-4 md:mt-0"><h4 class="font-bold">Location:</h4> <%= post.location %></div>
+      <div class="col-start-7 col-span-6 md:row-start-1 md:col-start-11 md:col-span-2 justify-self-end mt-4 md:mt-0"><h4 class="font-bold">Trail Name:</h4> <%= post.trailName %></div>
     </div>
     <%if(post.user.id == loggedInUser._id){ %>
-    <div class="grid grid-cols-9 flex mt-4">
-      <div class="sm:col-start-8 flex sm:justify-end justify-self-center col-start-1 col-span-9 gap-4">
+    <div class="grid grid-cols-9 flex mt-4 md:mt-0">
+      <div class="md:col-start-8 flex md:justify-end justify-self-center col-start-1 col-span-9 gap-4">
         <form
       class="col-1"
       action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -27,7 +27,7 @@
         <h3 class="col-3 flex justify-center font-bold likesText"><%= post.likes %></h3>
     </form>
 
-   <div class="sm:col-start-9 sm:justify-end">
+   <div class="md:col-start-9 md:justify-end">
     <form
       action="/post/deletePost/<%= post.id %>?_method=DELETE"
       method="POST"
@@ -37,8 +37,8 @@
     </form>
 </div>
     <% } else {%>   
-      <div class="grid grid-cols-9 flex mt-4">
-      <div class="col-start-1 col-span-9 flex justify-center sm:justify-self-end">
+      <div class="grid grid-cols-9 flex">
+      <div class="col-start-1 col-span-9 md:col-start-9 flex justify-center lg:justify-self-end">
         <form
       class="col-1"
       action="/post/likePost/<%= post.id %>?_method=PUT"
@@ -55,7 +55,7 @@
 </div>  
 </section>
 </div>
-  <div class="row-start-2 col-start-1 col-span-9 sm:col-start-7 sm:col-span-3 sm:row-start-1 col-3 mt-5 p-6">
+  <div class="col-start-1 col-span-9 lg:col-start-7 lg:col-span-3 col-3 mt-5 p-6">
       <% for(var i=0; i<comment.length; i++) {%>
         <div class="chat chat-start">
           <div class="chat-image avatar">
@@ -72,10 +72,10 @@
       <form action="/comment/createComment/<%= post.id%>" method="POST">
         <div class="mb-3 form-control">
             <label for="comment" class="form-label">Comment</label>
-            <input type="text" class="input input-bordered text-black" id="comment" name="comment">
+            <input type="text" class="input input-bordered text-black md:w-1/2 lg:w-full" id="comment" name="comment">
         </div>
         <div class="form-control mt-3">
-          <button class="btn btn-grey">Post</button>
+          <button class="btn btn-grey md:w-1/2 lg:w-full">Post</button>
         </div>
       </form>
   </div>
