--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -23,7 +23,7 @@
       <p><%= posts[i].caption%></p>
       </div>
       <div class="col-start-3 col-span-1">
-        <a href="/profile/<%= posts[i].user._id%>">
+        <a href="/profile/<%= posts[i].user.userName%>">
         <h2 class="card-title"> <%= posts[i].user.userName %></h2></a>
         <div class="mb-2"><h5 class="font-bold">Location:</h5> <%= posts[i].location%></div>
         
@@ -42,7 +42,7 @@
 
       <!-- outer div -->
       <div class="flex flex-row justify-center gap-4 sm:self-end">
-      <% if (posts[i].user._id == user.id) { %>
+      <% if (posts[i].user.userName == user.userName) { %>
         <form
         class=""
         action="/feed/likePost/<%= posts[i]._id %>?_method=PUT"
