--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -30,8 +30,8 @@
   </main>
  
   <section class="grid grid-cols-9">
-    <section class="border border-2 col-start-2 col-span-2 my-4" >
-      <div class="border border-4  bg-slate-300 p-3 h-56">
+    <section class="col-start-1 col-span-9 lg:col-span-2 lg:my-4 m-4" >
+      <div class="border border-4 bg-slate-300 p-3 h-56">
         <h3 class="font-extrabold">About:</h3>
         <p><i class="fa-solid fa-circle-info"></i> <%= user.bio%></p>
         <br>
@@ -40,12 +40,12 @@
     </section>
     
 
-    <section class="border border-slate-900 col-start-4 col-span-6 grid grid-cols-2 gap-4 border-black m-4 p-4" >
-      
-      <div class="col-start-1 col-span-2 grid grid-cols-9 py-2">
+    <section class="row-start-2 lg:row-start-1 border border-slate-900 col-start-1 col-span-9 lg:col-start-4 lg:col-span-6 grid grid-cols-1 lg:grid-cols-2 gap-4 border-black mx-4 lg:m-4 p-1 lg:p-4" >
+      <div class="col-start-1 lg:col-span-2 grid grid-cols-9">
         <h2 class="col-start-1 text-2xl">Posts:</h2>
-        <a class="col-start-8 col-span-2 flex justify-center" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg w-3/5">Add Post</button></a>
+        <a class="col-start-8 col-span-2 flex justify-end" href="/post"><button class="btn btn-outline mx-4 normal-case text-lg w-3/5">Add Post</button></a>
       </div>
+      
       <% for(var i=0; i<posts.length; i++) {%>
       <div class="card card-compact w-fit bg-slate-100 shadow-xl m-2">
         <figure class="h-60"><a href="/post/<%= posts[i].userName%>"><img src="<%= posts[i].image%>" alt="Shoes" /></a></figure>
