--- a/public/style.css
+++ b/public/style.css
@@ -3778,6 +3778,11 @@ html {
   margin-bottom: 1rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mt-2 {
   margin-top: 0.5rem;
 }
@@ -3836,6 +3841,10 @@ html {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .block {
@@ -3940,6 +3949,10 @@ html {
   width: max-content;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .max-w-sm {
   max-width: 24rem;
 }
@@ -4039,6 +4052,10 @@ html {
 
 .gap-0 {
   gap: 0px;
+}
+
+.gap-6 {
+  gap: 1.5rem;
 }
 
 .self-start {
@@ -4199,6 +4216,11 @@ html {
   padding-right: 1rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -4213,6 +4235,10 @@ html {
 
 .pb-2 {
   padding-bottom: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -4808,6 +4834,14 @@ button.btn-grey:hover{
     grid-column-start: 4;
   }
 
+  .lg\:col-start-6 {
+    grid-column-start: 6;
+  }
+
+  .lg\:col-start-3 {
+    grid-column-start: 3;
+  }
+
   .lg\:row-start-1 {
     grid-row-start: 1;
   }
@@ -4837,8 +4871,16 @@ button.btn-grey:hover{
     margin-top: 0px;
   }
 
+  .lg\:mt-2 {
+    margin-top: 0.5rem;
+  }
+
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-72 {
+    height: 18rem;
   }
 
   .lg\:w-48 {
@@ -4860,6 +4902,10 @@ button.btn-grey:hover{
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
   }
 
   .lg\:grid-cols-3 {
