--- a/views/createPost.ejs
+++ b/views/createPost.ejs
@@ -2,38 +2,38 @@
 <div class="hero min-h-screen" style="background-image: url(/Images/funes-4984899.jpg);">
   <div class="hero-overlay bg-opacity-20"></div>
   <div class="text-center text-neutral-content">
-    <div class="">
-      <div class="card flex-shrink-0 shadow-2xl bg-slate-300">
+    <div>
+      <div class="md:card flex-shrink-0 shadow-2xl bg-slate-300">
         <div class="card-body">
           <form action="/post/createPost" enctype="multipart/form-data" method="POST">
 
-          <div class="form-control">
-            <h2 class="text-black text-2xl">Create a Post</h2>
+          <div class="form-control flex">
+            <h2 class="text-3xl font-bold text-slate-900">Create a Post</h2>
           <label class="label">
             <span class="label-text">Title</span>
           </label>
-          <input type="text" placeholder="title" class="input input-bordered text-black" id="title" name="title"/>
+          <input type="text" placeholder="Title" class="input input-bordered text-black" id="title" name="title"/>
           </div>
 
           <div class="form-control">
             <label class="label">
               <span class="label-text">Location</span>
             </label>
-            <input type="text" placeholder="location" class="input input-bordered text-black" id="location" name="location"/>
+            <input type="text" placeholder="Location" class="input input-bordered text-black" id="location" name="location"/>
           </div>
 
           <div class="form-control">
             <label class="label">
               <span class="label-text">Trail Name</span>
             </label>
-            <input type="text" placeholder="trail name" class="input input-bordered text-black" id="trailName" name="trailName"/>
+            <input type="text" placeholder="Trail name" class="input input-bordered text-black" id="trailName" name="trailName"/>
           </div>
 
           <div class="form-control">
             <label class="label">
               <span class="label-text">Caption</span>
             </label>
-            <textarea type="text" placeholder="caption" class="input input-bordered h-32 text-black" id="caption" name="caption"></textarea>
+            <textarea type="text" placeholder="Caption" class="input input-bordered h-32 text-black" id="caption" name="caption"></textarea>
           </div>
 
           <div class="form-control">
