--- a/views/editProfile.ejs
+++ b/views/editProfile.ejs
@@ -1,18 +1,18 @@
 <%- include('partials/header') -%>
 <!-- header image -->
-<div class="hero min-h-screen bg-base-200" style="background-image: url(/Images/funes-4984899.jpg);">
-  <div class="hero-content grid grid-cols-2">
-    <div class="col-start-1 col-span-2 justify-self-center ">
+<div class="md:hero md:min-h-screen bg-base-200" style="background-image: url(/Images/funes-4984899.jpg);">
+  <div class="md:hero-content grid md:grid-cols-2">
+    <div class="col-start-1 col-span-2 justify-self-center">
       
     </div>
-    <div class="col-start-1 mx-10">
+    <div class="hidden md:block md:col-start-1 mx-10">
       <img src="<%= user.profilePhoto%>" class="max-w-sm rounded-lg shadow-2xl border-white border-4" />
     </div>
-    <div class="col-start-2 justify-center mx-10">
-    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-      <div class="card-body col-span-2">
+    <div class="md:col-start-2 md:justify-center md:mx-10">
+    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100 bg-slate-300">
+      <div class="card-body col-span-2 bg-slate-300">
         <div class="form-control">
-          <h1 class="text-3xl font-bold text-slate-900">Edit Profile</h1>
+          <h1 class="text-3xl font-bold text-slate-900 mx-auto">Edit Profile</h1>
           </div>
         <form action="/editProfile/editProfile" enctype="multipart/form-data" method="POST">
         <div class="form-control">
@@ -37,6 +37,9 @@
         </div>
 
         <div>
+          <label class="label">
+            <span class="label-text text-slate-900">Image</span>
+          </label>
           <input type="file" class="file-input file-input-bordered file-input-slate-900 w-full max-w-xs" id="imageUpload" name="file" />
         </div>
 
